# Semestre9

./: LICENSE  README.md
Didactica de la Fisica/Tarea 1/: Header_original.tex  content.tex  tarea1.tex
Didactica de la Fisica/Tarea 2/: Header_original.tex
Didactica de la Fisica/Tarea 3/: Header_original.tex  content.tex  tarea3.tex
Didactica de la Fisica/Tarea 5/: content.tex  tarea5.tex
Didactica de la Fisica/Tarea 6/: Header_original.tex  content.tex  tarea6.aux  tarea6.out  tarea6.tex
Didactica de la Fisica/osciladores_acoplados/: olsciladores_acoplados.aux  olsciladores_acoplados.tex
Física Atmosférica/Ensayo_Lorenz/: Header_original.tex  content.tex  ensayo.tex  front_page.tex
Física Atmosférica/Tarea 1/: Header_original.tex  content.tex  tarea1.tex
Física Atmosférica/Tarea 2/: Header_original.tex  content.tex  tarea2.tex
Física Atmosférica/Tarea 3/: Header_original.tex  content.tex  tarea3.tex
Física Atmosférica/Tarea 4/: Header_original.tex  content.tex  tarea4.tex
Física Atmosférica/Tarea 5/: Header_original.tex  content.tex  tarea5.tex
Física Atmosférica/Tarea 6/: Header_original.tex  content.tex  tarea6.tex
Física Atmosférica/Tarea 7/: Header_original.tex  content.tex  tarea7.tex
Laboratorio Avanzado/Codigos_clase/: thist.C
Laboratorio Avanzado/Codigos_clase/U1-P3/cm03/: CMakeLists.txt
Laboratorio Avanzado/Final/: final.aux  final.out  final.tex
Laboratorio Avanzado/Rutherford/: rutherford.aux  rutherford.out  rutherford.tex
Laboratorio Avanzado/Tarea 1I/: Header_original.tex  content.tex  tarea1.tex
(+68 files in other folders)
